

2008-07-06 Chris Morley

  * src/main: Documentation of mesmer output streams
  
2008-7-13 Struan Robertson

  * ReactionManager.cpp: Removal of reference to SuperMolecules. This reference was used to store the combined zero point energy location of the reactants. This is now stored on the pseudo-isomer.
  * AssociationReaction.h/.cpp, Reaction.h: Changes related to the above.

2008-7-13 Struan Robertson

  * ReactionManager.cpp: Removal of unnecessary reference to SuperMolecule class.
  * MesmerILT.cpp: Check of reaction type (Mesmer ILT only applies to association reactions) and minor changes to use AssociationReaction rather than SuperMolecule.
  * AssociationReaction.h: Addition of method to obtain pointer to
reactant in excess.

2008-7-12 Struan Robertson

  * AssociationReaction.cpp/Molecule.h: Remove of unnecessary methods from SuperMolecule class.

2008-7-12 Struan Robertson

  * ReactionManager.cpp/.h: Replaced an invocation of get_bi_molecularspecies with get_pseudoIsomer as part of the rationalization of SuperMolecules.

2008-07-06 Chris Morley

  Provide -g option which turns off cinfo and ctest streams and may solve the problems
  Alvyn was having with overflowing buffers.
  
_2008_07_09__15_39_30_ Chi-Hsiu Liang

  * Make zeroCount in matrix inversion routine an int array instead of an int vector. This removes address deallocation problem.

_2008_07_09__14_08_28_ Chi-Hsiu Liang

  * Removed all long double for cross platform consistency (Windows Visual C++ compiler maps long double to double)
  * Changed m_pSystemCollisionOperator to quad double. 
    I suspect some diagonalization problem caused by the accumulated error when the addition of values in AddReactionTerms 
    are done in double instead of higher precision. For every variable type such as double, long double, double double and 
    quad double, there is a limit called epsilon. Epsilon is the smallest non-trivial number you can add with 1.000.