@@ -5,24 +5,23 @@
 
 namespace mesmer
 {
-  class ClassicalRotor : public DensityOfStatesCalculator
-  {
-    // provide a function to define particular counts of the convoluted DOS of two molecules
-    bool countDimerCellDOS(SuperMolecule* rcts); // convolutes the DOS of two molecules
+    class ClassicalRotor : public DensityOfStatesCalculator
+    {
+    public:
 
-    // provide a function to define particular counts of the DOS of a molecule
-    bool countMonomerCellDOS(ModelledMolecule* mol);
+        // Provide a function to define particular counts of the convolved DOS of two molecules.
+        bool countDimerCellDOS(SuperMolecule* rcts); // convolves the DOS of two molecules
 
-  public:
+        // Provide a function to define particular counts of the DOS of a molecule.
+        virtual bool countCellDOS(ModelledMolecule* mol);
 
-    ///Constructor which registers with the list of MicroRateCalculators in the base class
-    ClassicalRotor(const std::string& id) : DensityOfStatesCalculator(id){}
+        ///Constructor which registers with the list of MicroRateCalculators in the base class
+        ClassicalRotor(const std::string& id) : DensityOfStatesCalculator(id){}
 
-    virtual ~ClassicalRotor() {}
+        virtual ~ClassicalRotor() {}
 
-    virtual bool countCellDOS(ModelledMolecule* mol);
+    } ;
 
-  };
 }//namespace
 
 #endif // GUARD_ClassicalRotor_h
